Improve the game UI - Add a specific button to remove the last main instructions - Add a specific button to remove the last function instructions - Remove the function icon inside the function tablet, replace with a background-color - Add labels to identify tablets - Put available tomettes on the left on small screens - Fix translation from visual language to textual language (handling repeat inside function as example)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,3 +14,7 @@ button.icon {
 	margin: 0px;
 	height: 100%;	
 }
+
+.tablet-function {
+	background-color: #E9F5E1;
+}
